Netcentric Frontend Developer | SmartRecruiters. Fusion Factory Frontend Developer | SmartRecruiters. Netcentric Senior Frontend Developer | SmartRecruiters. Netcentric Frontend Software Engineer | SmartRecruiters. Netcentric Senior Frontend Software Engineer | SmartRecruiters. Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters. Job @ Batmaid.ch (Warsaw): Senior Frontend Softwar... | JOIN. SparkPost Careers - Front End Engineer.       Front-end Development Lead - xneelo     . Bynder Senior Front End Engineer | SmartRecruiters. Forescout Technologies Inc. Careers - React Frontend Developer. NICE Careers - Senior Front End Engineer. Front-end Web Developer - RubensteinTech - Career Page. FRONT-END DEVELOPER - Luisa Via Roma spa - Career Page. Ungerboeck Software International Careers - Front End Web Developer. Wirecard Asia - Jobs: Front-End UI Developer, Banking Solutions - Apply online. Job @ brandung & Co. KG (Köln): Frontend Entwickle... | JOIN. Front End Engineer | Noodle.com - The Noodle Companies - Career Page. Job @ brandung & Co. KG (Köln): Senior Frontend En... | JOIN. Job Application for Frontend Developer at Algorythma. Xenzone - Jobs: Front-end Developer, London, JavaScript, HTML, CSS - Apply online. Job @ Healthmetrix (Berlin): Senior Web Frontend S... | JOIN. Wirex - Jobs: Front End Team Lead - Apply online. Newfront Insurance - Backend Engineer. Vail Systems, Inc. Careers - Front-End Engineer. Job @ Verity Studios (Zürich): QT/QML Front End So... | JOIN. Job Application for Développeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI.       Frontend Engineer (m/f/x) - UP42 GmbH     . Radley Yeldar - Jobs: Freelance Front End Developer - Apply online. Job Application for Software Engineer - Frontend at LiveRamp. HomeX - Frontend Developer. Futrli - Jobs: Lead Frontend Engineer - Apply online. Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online. Futrli - Jobs: Front End

--- a/frontend.html
+++ b/frontend.html
@@ -145,7 +145,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1785999'>Job Application for D?veloppeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -187,7 +187,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getcaya.join.com/jobs/268852-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
+<h5><a href='https://getcaya.join.com/jobs/268852-react-native-front-end-developer-m-w-x'>Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -217,7 +217,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bitpesa.workable.com/jobs/1080268'>Jobs: Senior Front-End Engineer - Apply online - BitPesa</a></h5> 
+<h5><a href='https://bitpesa.workable.com/jobs/1080268'>Jobs: Senior Front-End Engineer - Apply online - BitPesa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Senior Front-End Engineer at BitPesa.</p>
 <hr/>
@@ -229,7 +229,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Lead Frontend Engineer - React (m/f/x) at HeavenHR.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092533-frontend-backend-developer-remote-'>Lingoda Frontend/Backend Developer (Remote) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092533-frontend-backend-developer-remote-'>Lingoda Frontend/Backend Developer (Remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -255,11 +255,11 @@ Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Developer: Frontend focus at Ecosia.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zl.workable.com/j/22786BC705'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<h5><a href='https://zl.workable.com/j/22786BC705'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... This is an exciting role for a driven frontend developer with eCommerce 
 experience at an agency level. We are specifically looking for developers that 
@@ -273,7 +273,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
 <hr/>
-<h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
 <hr/>
@@ -334,7 +334,7 @@ modern?...</p>
 <p>5 days ago ... We are looking for a talented Frontend Engineer to lead our efforts in building an 
 industry-leading SaaS based platform that solves a suite of provider data?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dataguard.join.com/jobs/268613-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Frontend Developer (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://dataguard.join.com/jobs/268613-frontend-developer-m-w-d'>Job @ DataGuard (Munich): Frontend Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -369,7 +369,7 @@ If you're looking for a career with a purpose, you've come to the right place.</
 software engineers and academics implementing change in the financial industry
 .</p>
 <hr/>
-<h5><a href='https://spotdraft.freshteam.com/jobs/pIcQa4qNp-lH/frontend-engineer'>Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spotdraft.freshteam.com/jobs/pIcQa4qNp-lH/frontend-engineer'>Frontend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Frontend Engineer. Bengaluru, Karnataka | Full time. Apply Now. SpotDraft is 
 built as a Single Page App using Angular (2+) and React application. We are?...</p>
