--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qPFaVfwj&k=Job&j=oUOsafw4&__jvst=Employee&__jvsd=sasuChwu&__jvsc=Twitter&bid=nioFWLwx'>3Q Digital Careers - Jr Project Manager, Creative</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://ag-consulting-partners-inc.workable.com/j/A5E3586F53'>AG Consulting Partners, Inc. - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
@@ -100,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ppro/e4eee068-b9ff-4b33-84cc-0dd8662d5654'>PPRO - IT Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ppro/e4eee068-b9ff-4b33-84cc-0dd8662d5654'>PPRO - IT Project Manager</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/project-manager-enterprise-learning-and-development-6309'>Project Manager (Enterprise Learning and Development) - Florida Blue Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/project-manager-enterprise-learning-and-development-6309'>Project Manager (Enterprise Learning and Development) - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -144,7 +148,7 @@
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/271419-it-project-manager'>Job @ TwinCap (Z?rich): IT Project Manager | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/271419-it-project-manager'>Job @ TwinCap (Z?rich): IT Project Manager | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -156,7 +160,7 @@
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/8E2367FD7C'>Wirecard Asia - Jobs: Senior Project Manager - Apply online</a></h5> 
+<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/8E2367FD7C'>Wirecard Asia - Jobs: Senior Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -176,7 +180,7 @@
 <p><span class="badge badge-light">Dubai Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421656-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421656-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -210,7 +214,7 @@
 <p><span class="badge badge-light">Seattle Washington, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o05I8fwF&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nn9mWLw4'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o05I8fwF&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nn9mWLw4'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -218,11 +222,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/f79b1da0-e77c-4c75-9f6d-56c3eb60918b'>Carta - Technical Program Manager, Liquidity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/f79b1da0-e77c-4c75-9f6d-56c3eb60918b'>Carta - Technical Program Manager, Liquidity</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/finix/1ac0e305-3a21-4236-9d34-d216c9778689'>Finix - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/finix/1ac0e305-3a21-4236-9d34-d216c9778689'>Finix - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -230,7 +234,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/looker/fef69d5f-1640-4d17-9d8e-7acf694bf841'>Looker - Program Manager, Enterprise Programs</a></h5> 
+<h5><a href='https://jobs.lever.co/looker/fef69d5f-1640-4d17-9d8e-7acf694bf841'>Looker - Program Manager, Enterprise Programs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -238,7 +242,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284260-data-entry-project-manager-rm2500-per-month-mid-senior-level-'>Seeka Technology Data Entry Project Manager (RM2500 per month) (Mid-Senior Level) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284260-data-entry-project-manager-rm2500-per-month-mid-senior-level-'>Seeka Technology Data Entry Project Manager (RM2500 per month) (Mid-Senior Level) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -248,7 +252,7 @@
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://unicepta.softgarden.io/job/4505089/Project-Manager-Media-Monitoring-w-m-d-?jobDbPVId=12310449&amp;l=de'>Project Manager Media Monitoring (w/m/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://unicepta.softgarden.io/job/4505089/Project-Manager-Media-Monitoring-w-m-d-?jobDbPVId=12310449&amp;l=de'>Project Manager Media Monitoring (w/m/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -348,7 +352,7 @@ scale our customer scanning tools. Our digital tools maximize the value of?...</
 <p>6 days ago ... Program Manager, International Accreditation. Terms: Permanent ? Full-time. 
 Salary: Commensurate with experience. Location: Ottawa (1150 Cyrville Road).</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/socrata/job/oolDafwg'>Socrata Careers - Partner Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/socrata/job/oolDafwg'>Socrata Careers - Partner Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... The Partner Program Manager will have broad responsibility for the development 
 of several key program deliverables including design, definition and execution?...</p>
@@ -407,7 +411,7 @@ through?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dare/jobs/1783401'>Job Application for Project Manager - Clyde & Co - PERM at Dare</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dare/jobs/1783401'>Job Application for Project Manager - Clyde & Co - PERM at Dare</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -421,7 +425,7 @@ through?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -462,10 +466,6 @@ time. loading Fetching your Linkedin profile .</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1784586'>Job Application for Strategic Program Manager, NPI - Global Supply Chain at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA Dallas, TX</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/project-manager-oncology-30235'>Project Manager (Oncology) - Syneos Health Careers</a></h5> 
-<p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
