Job Application for Senior JavaScript Front-End Developer at TrackTik. GeoPhy - Front-end Developer. Netcentric Frontend Developer | SmartRecruiters. Fusion Factory Frontend Developer | SmartRecruiters. Netcentric Senior Frontend Developer | SmartRecruiters. Netcentric Frontend Software Engineer | SmartRecruiters. Netcentric Senior Frontend Software Engineer | SmartRecruiters. Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters. Job @ Batmaid.ch (Warsaw): Senior Frontend Softwar... | JOIN. SparkPost Careers - Front End Engineer.       Front-end Development Lead - xneelo     . Bynder Senior Front End Engineer | SmartRecruiters. Forescout Technologies Inc. Careers - React Frontend Developer. NICE Careers - Senior Front End Engineer. Front-end Web Developer - RubensteinTech - Career Page. FRONT-END DEVELOPER - Luisa Via Roma spa - Career Page. Ungerboeck Software International Careers - Front End Web Developer. Wirecard Asia - Jobs: Front-End UI Developer, Banking Solutions - Apply online. Job @ brandung & Co. KG (Köln): Frontend Entwickle... | JOIN. Front End Engineer | Noodle.com - The Noodle Companies - Career Page. Job @ brandung & Co. KG (Köln): Senior Frontend En... | JOIN. Job Application for Frontend Developer at Algorythma. Xenzone - Jobs: Front-end Developer, London, JavaScript, HTML, CSS - Apply online. Job @ Healthmetrix (Berlin): Senior Web Frontend S... | JOIN. Wirex - Jobs: Front End Team Lead - Apply online. Newfront Insurance - Backend Engineer. Vail Systems, Inc. Careers - Front-End Engineer. Job @ Verity Studios (Zürich): QT/QML Front End So... | JOIN. Job Application for Développeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI.       Frontend Engineer (m/f/x) - UP42 GmbH     . Radley Yeldar - Jobs: Freelance Front End Developer - Apply online. Job Application for Software Engineer - Frontend at LiveRamp. HomeX - Frontend Developer. Futrli - Jobs: Lead Frontend Engineer - A

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012052002'>Job Application for Senior JavaScript Front-End Developer at TrackTik</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/geophy/856efb92-cf13-4dc3-99c9-b2c9e664cab0'>GeoPhy - Front-end Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
@@ -58,11 +62,11 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428670-senior-frontend-software-engineer'>Netcentric Senior Frontend Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999692428670-senior-frontend-software-engineer'>Netcentric Senior Frontend Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692158110-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692158110-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -171,7 +175,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -179,7 +183,7 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/879716E033'>Futrli - Jobs: Front End Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -213,15 +217,15 @@ of conveying nuances and meaning that just can't be expressed through clicks?...
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kickstarter/c0716afb-21a8-467e-822d-dcf189f1c85f'>Kickstarter - Front End Engineer, Project Storytelling</a></h5> 
+<h5><a href='https://jobs.lever.co/kickstarter/c0716afb-21a8-467e-822d-dcf189f1c85f'>Kickstarter - Front End Engineer, Project Storytelling</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://gowago.join.com/jobs/267630-senior-front-end-developer'>Job @ GOWAGO (Z?rich): Senior Front-End Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gowago.join.com/jobs/267630-senior-front-end-developer'>Job @ GOWAGO (Z?rich): Senior Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bitpesa.workable.com/jobs/1080268'>Jobs: Senior Front-End Engineer - Apply online - BitPesa</a></h5> 
+<h5><a href='https://bitpesa.workable.com/jobs/1080268'>Jobs: Senior Front-End Engineer - Apply online - BitPesa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... Apply online for the job of Senior Front-End Engineer at BitPesa.</p>
 <hr/>
@@ -251,7 +255,7 @@ design with the art of programming. You will be working on game-changing?...</p>
 <p>vor 4 Tagen ... Das hatchery Team sucht zum n?chstm?glichen Zeitpunkt einen... Praktikant 
 Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <hr/>
-<h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
@@ -263,7 +267,7 @@ Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
+<h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... This is an exciting role for a driven frontend developer with eCommerce 
 experience at an agency level. We are specifically looking for developers that 
@@ -456,10 +460,6 @@ machine learning alongside financial engineering to continuously turn data into?
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='http://medbridge.applytojob.com/apply/9Gmh11A1A4/Front-End-Software-Development-Engineer-III-Seattle-WA'>Front End Software Development Engineer III (Seattle, WA) - MedBridge - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351802-front-end-developer'>Lecle Vietnam Front-end Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
